# gobang

./: AIgame.cpp  CMakeLists.txt  Makefile.win  PVPgamepage.cpp  README.md  easyx_components.h  gameplayback.cpp  gobang.dev  gobang.layout  headerfile.cpp  headerfile.h  homepage.cpp  main.cpp  makelist.bat  newGame  selection.cpp
gamereplay/: 2023.12.18_9：30.txt  datalist.txt
